--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
-  "repository": "https://github.com/franciskim/cordova-plugin-uid.git",
+  "repository": "https://github.com/franciskim/cordova-plugin-uid",
   "keywords": [
     "cordova",
     "uid",
